Fix issue with regular orient board & overflow scrollbar appearing (#284)

--- a/client/src/styles/animation.css
+++ b/client/src/styles/animation.css
@@ -1,5 +1,5 @@
 #anime-overlay > * {
-  position: absolute;
+  position: fixed;
 }
 
 .invisible {
